// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClientRole /> should not render children elements if authentication is false  1`] = `
<div>
  <div>
    <div
      class="error"
    >
      Authentication unsuccessful
    </div>
  </div>
</div>
`;

exports[`<ClientRole /> should not render children elements if authentication is true but invalid Client role 1`] = `
<div>
  <div>
    <div
      class="error"
    >
      Authentication unsuccessful
    </div>
  </div>
</div>
`;

exports[`<ClientRole /> should render children elements if authentication is true and with valid Client role 1`] = `
<div>
  <div>
    <div
      class="client-role"
    >
      Authentication successful
    </div>
  </div>
</div>
`;
